[package]
name = "rustrace"
version = "0.1.0"
authors = ["sp4ghet <sp4ghet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
nalgebra-glm = "0.9"
log = "0.4"
simple_logger = "1.11"
indicatif = "0.15"
palette = "0.5"
rand = "0.7"
